# mata

./: .env.example  .gitignore  Makefile  README.md  render.yaml
backend/: .env.e2e  Procfile  pyproject.toml
backend/backend/: __init__.py  confidence.py  graph.py  llm.py  main.py  models.py  pubmed.py  worker.py
backend/backend/db/: __init__.py  jobs.py  models.py  schema.py
backend/tests/: __init__.py  test_confidence.py  test_e2e.py  test_eval.py  test_graph.py  test_jobs.py  test_llm.py  test_models.py  test_pubmed.py  test_search_endpoint.py
backend/tests/fixtures/: eval_abstracts.json
frontend/: jest.config.js  jest.setup.ts  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo  types.ts
frontend/__mocks__/: styleMock.js
frontend/__mocks__/@xyflow/: react.tsx
frontend/__tests__/: ChainPanel.test.tsx  NodeDrawer.test.tsx  SearchPage.test.tsx  graphUtils.test.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: ChainControls.tsx  ChainPanel.tsx  EdgeLoadingIndicator.tsx  EvidenceGraph.tsx  NodeDrawer.tsx  RelationshipLegend.tsx  Sidebar.tsx
frontend/components/nodes/: EvidenceNode.tsx  GapNode.tsx  RootNode.tsx
frontend/hooks/: useEdgeCalculation.ts  useJobHistory.ts  useJobPoller.ts
frontend/lib/: graphUtils.ts  mockData.ts
