[project]
name = "mata-backend"
version = "0.1.0"
# AGENT-CTX: Targeting 3.10 (system Python on dev machine). All syntax used
# (list[T] generics, Literal, match) is available in 3.10+. Bump to 3.11
# on Railway if needed — Railway supports 3.11 via nixpacks.
requires-python = ">=3.10"
dependencies = [
    # AGENT-CTX: groq SDK chosen over google-generativeai.
    # Reasons: 30 RPM / 6000 RPD free tier (vs Gemini 5 RPM / 20 RPD), OpenAI-compatible
    # chat completions API, no gRPC complexity, straightforward async-via-thread pattern.
    "groq>=1.0.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    # AGENT-CTX: httpx is used for async PubMed HTTP calls and as the ASGI test client.
    # Do not replace with requests — the async endpoint requires an async HTTP client.
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    # AGENT-CTX: pytest-asyncio required for async test functions.
    # asyncio_mode = "auto" (below) means no @pytest.mark.asyncio decorator needed.
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# AGENT-CTX: Filter out FutureWarning from google-generativeai (deprecated package).
# The warning fires on every test run but is not actionable until we migrate to google-genai.
# Remove this filter after migrating to google-genai.
filterwarnings = []
# AGENT-CTX: `live` marker gates tests that hit real PubMed + Gemini APIs.
# Default pytest run skips them (they are not in the default marker set).
# Run live tests with: pytest -m live
# Skip live tests with: pytest -m "not live"  (default in CI)
markers = [
    "live: hits real external APIs (PubMed, Gemini). Requires valid API keys and quota.",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# AGENT-CTX: Tells hatchling that the installable package is the inner backend/ dir.
# This allows `from backend.pubmed import fetch_abstracts` to resolve correctly
# when running pytest from the backend/ project root.
packages = ["backend"]
