[project]
name = "mata-backend"
version = "0.1.0"
# AGENT-CTX: Targeting 3.10 (system Python on dev machine). All syntax used
# (list[T] generics, Literal, match) is available in 3.10+. Bump to 3.11
# on Render if needed — Render supports 3.11 via nixpacks.
requires-python = ">=3.10"
dependencies = [
    # AGENT-CTX: groq SDK chosen over google-generativeai.
    # Reasons: 30 RPM / 6000 RPD free tier (vs Gemini 5 RPM / 20 RPD), OpenAI-compatible
    # chat completions API, no gRPC complexity, straightforward async-via-thread pattern.
    "groq>=1.0.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    # AGENT-CTX: httpx is used for async PubMed HTTP calls and as the ASGI test client.
    # Do not replace with requests — the async endpoint requires an async HTTP client.
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    # AGENT-CTX: pytest-asyncio required for async test functions.
    # asyncio_mode = "auto" (below) means no @pytest.mark.asyncio decorator needed.
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = []
# AGENT-CTX: `live` — hits real PubMed + Groq APIs in-process (requires GROQ_API_KEY).
# AGENT-CTX: `e2e`  — hits deployed Render + Vercel URLs over the network (no API key needed locally).
# Default `make test` run excludes both markers. Only run them explicitly.
markers = [
    "live: hits real PubMed + Groq APIs in-process. Requires GROQ_API_KEY and available quota.",
    "e2e: smoke tests against deployed Render backend + Vercel frontend. Run with: make test-e2e",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# AGENT-CTX: Tells hatchling that the installable package is the inner backend/ dir.
# This allows `from backend.pubmed import fetch_abstracts` to resolve correctly
# when running pytest from the backend/ project root.
packages = ["backend"]
